--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-body {
+@import url("https://fonts.googleapis.com/css?family=Lato:100");
+/*body {
   text-align: center;
   font-family: courier;
   background-image: url("../assets/image.jpeg");
@@ -106,6 +107,130 @@ body {
 .share-button:hover .share__link:nth-of-type(4) {
   transition-delay: 0.4s;
 }
+
+:root {
+  --rotate: 0deg;
+}
+
+table, tbody, tr {
+  position: absolute;
+}
+
+body {
+  height: 100vh;
+  perspective: 100em;
+  perspective-origin: 50% 50%;
+  font-family: 'Lato', sans-serif;
+  font-weight: 100;
+  background-color: #141414;
+}
+
+table {
+  top: 50%;
+  left: 50%;
+  font-size: 8vmin;
+  line-height: 8vmin;
+  transform-style: preserve-3d;
+  transform-origin: 50% 50% 50%;
+  transform: rotateY(var(--rotate));
+  transition: transform 500ms ease-in-out;
+}
+
+tbody {
+  transform-style: preserve-3d;
+}
+
+tbody > tr {
+  margin: -4em;
+  width: 8em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  -webkit-box-reflect: below 0 -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(50%, transparent), to(RGBA(0, 0, 0, 0.05)));
+}
+
+tbody > tr > th {
+  width: 100%;
+  background-color: white;
+}
+
+tbody > tr:nth-child(1) {
+  transform: rotateY(60deg) translateZ(6.9282em);
+}
+tbody > tr:nth-child(1) > td {
+  background-color: rgba(63, 40, 80, 0.97);
+}
+tbody > tr:nth-child(1) > th {
+  background-color: rgba(31, 20, 39, 0.97);
+}
+
+tbody > tr:nth-child(2) {
+  transform: rotateY(120deg) translateZ(6.9282em);
+}
+tbody > tr:nth-child(2) > td {
+  background-color: rgba(77, 40, 80, 0.97);
+}
+tbody > tr:nth-child(2) > th {
+  background-color: rgba(38, 20, 39, 0.97);
+}
+
+tbody > tr:nth-child(3) {
+  transform: rotateY(180deg) translateZ(6.9282em);
+}
+tbody > tr:nth-child(3) > td {
+  background-color: rgba(80, 40, 70, 0.97);
+}
+tbody > tr:nth-child(3) > th {
+  background-color: rgba(39, 20, 34, 0.97);
+}
+
+tbody > tr:nth-child(4) {
+  transform: rotateY(240deg) translateZ(6.9282em);
+}
+tbody > tr:nth-child(4) > td {
+  background-color: rgba(80, 40, 57, 0.97);
+}
+tbody > tr:nth-child(4) > th {
+  background-color: rgba(39, 20, 28, 0.97);
+}
+
+tbody > tr:nth-child(5) {
+  transform: rotateY(300deg) translateZ(6.9282em);
+}
+tbody > tr:nth-child(5) > td {
+  background-color: rgba(80, 40, 43, 0.97);
+}
+tbody > tr:nth-child(5) > th {
+  background-color: rgba(39, 20, 21, 0.97);
+}
+
+tbody > tr:nth-child(6) {
+  transform: rotateY(360deg) translateZ(6.9282em);
+}
+tbody > tr:nth-child(6) > td {
+  background-color: rgba(80, 50, 40, 0.97);
+}
+tbody > tr:nth-child(6) > th {
+  background-color: rgba(39, 25, 20, 0.97);
+}
+
+tbody > tr > th {
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  margin-bottom: 0.5em;
+}
+
+tbody > tr > td {
+  width: 100%;
+  color: white;
+  font-size: 20px;
+  text-align: center;
+}
+tbody > tr > td:not(:last-child) {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+}
+
 
 #contact h1 {
   font-family: helvetica;
