--- a/css/styles.css
+++ b/css/styles.css
@@ -13,13 +13,7 @@ body {
   background-color: #141414;
 }
 
-/*body {
-  text-align: center;
-  font-family: courier;
-  background-image: url("../assets/image.jpeg");
-  background-repeat: no-repeat;
-  background-size: 100%;
-}
+/*
 
 .share__icon {
   width: 32px;
