--- a/css/styles.css
+++ b/css/styles.css
@@ -159,11 +159,11 @@ tbody>tr:nth-child(1)>th {
   background-color: rgba(31, 20, 39, 0.97);
 }
 
-/*
-tbody > tr:nth-child(2) {
+tbody>tr:nth-child(2) {
   transform: rotateY(120deg) translateZ(6.9282em);
 }
-tbody > tr:nth-child(2) > td {
+
+/*tbody > tr:nth-child(2) > td {
   background-color: rgba(77, 40, 80, 0.97);
 }
 tbody > tr:nth-child(2) > th {
