--- a/css/styles.css
+++ b/css/styles.css
@@ -171,11 +171,11 @@ tbody>tr:nth-child(2)>th {
   background-color: rgba(38, 20, 39, 0.97);
 }
 
-/*
-tbody > tr:nth-child(3) {
+tbody>tr:nth-child(3) {
   transform: rotateY(180deg) translateZ(6.9282em);
 }
-tbody > tr:nth-child(3) > td {
+
+/*tbody > tr:nth-child(3) > td {
   background-color: rgba(80, 40, 70, 0.97);
 }
 tbody > tr:nth-child(3) > th {
