--- a/css/styles.css
+++ b/css/styles.css
@@ -179,11 +179,11 @@ tbody>tr:nth-child(3)>td {
   background-color: rgba(80, 40, 70, 0.97);
 }
 
-/*tbody > tr:nth-child(3) > th {
+tbody>tr:nth-child(3)>th {
   background-color: rgba(39, 20, 34, 0.97);
 }
 
-tbody > tr:nth-child(4) {
+/*tbody > tr:nth-child(4) {
   transform: rotateY(240deg) translateZ(6.9282em);
 }
 tbody > tr:nth-child(4) > td {
