--- a/css/styles.css
+++ b/css/styles.css
@@ -187,10 +187,11 @@ tbody>tr:nth-child(4) {
   transform: rotateY(240deg) translateZ(6.9282em);
 }
 
-/*tbody > tr:nth-child(4) > td {
+tbody>tr:nth-child(4)>td {
   background-color: rgba(80, 40, 57, 0.97);
 }
-tbody > tr:nth-child(4) > th {
+
+/*tbody > tr:nth-child(4) > th {
   background-color: rgba(39, 20, 28, 0.97);
 }
 
