--- a/css/styles.css
+++ b/css/styles.css
@@ -207,10 +207,11 @@ tbody>tr:nth-child(5)>th {
   background-color: rgba(39, 20, 21, 0.97);
 }
 
-/*tbody > tr:nth-child(6) {
+tbody>tr:nth-child(6) {
   transform: rotateY(360deg) translateZ(6.9282em);
 }
-tbody > tr:nth-child(6) > td {
+
+/*tbody > tr:nth-child(6) > td {
   background-color: rgba(80, 50, 40, 0.97);
 }
 tbody > tr:nth-child(6) > th {
