--- a/css/styles.css
+++ b/css/styles.css
@@ -215,10 +215,11 @@ tbody>tr:nth-child(6)>td {
   background-color: rgba(80, 50, 40, 0.97);
 }
 
-/*tbody > tr:nth-child(6) > th {
+tbody>tr:nth-child(6)>th {
   background-color: rgba(39, 25, 20, 0.97);
 }
 
+/*
 tbody > tr > th {
   color: white;
   font-size: 20px;
