--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,7 @@ tbody>tr>td:not(:last-child) {
   border-bottom: 1px solid rgba(255, 255, 255, 0.05);
 }
 
-/*
+
 #contact h1 {
   font-family: helvetica;
   font-weight: normal;
@@ -245,10 +245,11 @@ tbody>tr>td:not(:last-child) {
   color: #c0c0c0;
   padding-top: 50px;
   padding-bottom: 10px;
+  padding-right: 50px;
   width: 375px;
   margin: 0 auto;
 }
-
+/*
 .cal {
   display: inline-block;
   background: #ffe;
